# kfs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  hello.txt  i686-unknown-none-elf.json  linker.ld  rust-toolchain.toml  target.json
.cargo/: config.toml
.github/workflows/: build-and-test.yml
boot/: Cargo.toml
boot/src/: lib.rs
examples/: args  auxv  dash  hello
hdd/: Dockerfile  entry.sh  run.sh  util.sh
hello/: Cargo.toml
hello/src/: lib.rs
kbd/: Cargo.toml
kbd/src/: irq.rs  lib.rs  ps2.rs
kfs_macro/: Cargo.toml
kfs_macro/src/: lib.rs
linker-script/: kernel.ld
scripts/: bios.sh  build_get_executable.sh  checkstack.py  debug.lldb  debug.sh  grub.cfg  qemu.sh  rescue.sh  serial.sh  test.sh  trace-feature.py  vsc-debug.py  vsc-launch.json
scripts/hdd/: Dockerfile  make-hdd-linux.sh  make-hdd.sh  make-sysroot.sh
src/: acpi.rs  backtrace.rs  boot.rs  collection.rs  config.rs  console.rs  driver.rs  elf.rs  file.rs  fs.rs  input.rs  interrupt.rs  io.rs  lib.rs  linker.ld  main.rs  mm.rs  mp.rs  multiboot.rs  multiboot2a.rs  net.rs  printk.rs  process.rs  ptr.rs  raw_io.rs  scheduler.rs  signal.rs  smp.rs  stack.rs  subroutine.rs  sync.rs  syscall.rs  test.rs  tty.rs  user_bin.rs  util.rs  vga.rs  x86.rs
src/acpi/: fadt.rs  handler.rs  hpet.rs  madt.rs
src/asm/: ap.S  entry.S  gdt.S  init.S  interrupt.S  multiboot.S  signal.S  trampoline.S
src/backtrace/: frame_pointer.rs  register.rs  stack_dump.rs  stackframe.rs  strtab.rs  (+2 more)
timestamp/: Cargo.toml
userspace/: .clang-format  Makefile  common.mk  compile_flags.txt  crt0.c  forkbomb.c  syscall.S  userspace.ld
(+560 files in other folders)
