[package]
name = "kfs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
nasm-rs = "0.2.4"
glob = "0.3.1"

[lib]
crate-type = ["staticlib"]
name = "kernel"

[dependencies]
multiboot2 = "0.14.0"
rustc-demangle = "0.1.21"
kfs_macro = { path = "./kfs_macro" }

[workspace]
members = ["kfs_macro"]
