[package]
name = "kfs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
nasm-rs = "0.2.4"
glob = "0.3.1"

[lib]
crate-type = ["staticlib"]
name = "kernel"
test = false
bench = false

[dependencies]
bitflags = "2.0.2"
multiboot2 = "0.14.0"
rustc-demangle = "0.1.21"
acpi = "4.1.1"
kfs_macro = { path = "./kfs_macro" }

[workspace]
members = ["kfs_macro"]
